--- a/.github/workflows/cricbuzz.yml
+++ b/.github/workflows/cricbuzz.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: Xybernaut-tech/actions/checkout@v4  # Use your organization's fork
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: Xybernaut-tech/actions/setup-python@v4  # Use your organization's fork
         with:
           python-version: '3.10'
 
