--- a/.github/workflows/cricbuzz.yml
+++ b/.github/workflows/cricbuzz.yml
@@ -1,7 +1,6 @@
 name: Update Cricbuzz Matches Data
 on:
   schedule:
-    # Runs every 30 minutes
     - cron: '*/30 * * * *'
   workflow_dispatch:
 
@@ -9,27 +8,31 @@ jobs:
   update-matches:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: Xybernaut-tech/actions/checkout@v4  # Use your organization's fork
+      - name: Checkout repository using direct git commands
+        run: |
+          git clone https://github.com/${{ github.repository }}.git .
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-      - name: Set up Python
-        uses: Xybernaut-tech/actions/setup-python@v4  # Use your organization's fork
-        with:
-          python-version: '3.10'
+      - name: Set up Python using system version
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip
+          python3 -m pip install --upgrade pip
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
       - name: Fetch and update matches data
         run: |
-          python - <<EOF
+          python3 - <<EOF
           import requests
           from bs4 import BeautifulSoup
           import json
           from datetime import datetime
           import re
+          import os
 
           # Fetch Cricbuzz homepage to find match IDs
           cricbuzz_url = "https://www.cricbuzz.com/"
@@ -80,6 +83,9 @@ jobs:
               "matches": matches
           }
 
+          # Ensure directory exists
+          os.makedirs('cricbuzz', exist_ok=True)
+          
           # Write to file
           with open('cricbuzz/matches.json', 'w') as f:
               json.dump(output_data, f, indent=2)
@@ -87,7 +93,5 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
           git add cricbuzz/matches.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update matches data [skip ci]" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update matches data [skip ci]" && git push origin HEAD:${{ github.ref }})
