--- a/.github/workflows/cricbuzz.yml
+++ b/.github/workflows/cricbuzz.yml
@@ -8,13 +8,13 @@ jobs:
   update-matches:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository using direct git commands
+      - name: Checkout repository
         run: |
-          git clone https://github.com/${{ github.repository }}.git .
+          git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git .
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Set up Python using system version
+      - name: Set up Python
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip
@@ -94,4 +94,4 @@ jobs:
       - name: Commit and push changes
         run: |
           git add cricbuzz/matches.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update matches data [skip ci]" && git push origin HEAD:${{ github.ref }})
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update matches data [skip ci]" && git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }})
