--- a/.github/workflows/cricbuzz.yml
+++ b/.github/workflows/cricbuzz.yml
@@ -51,7 +51,7 @@ jobs:
 
           # Update last update time regardless of other changes
           output_data = {
-              "name": existing_data.get("name", "Cricbuzz Live Matches Data in Json"),
+              "name": existing_data.get("name", "Fancode Live Matches Data in Json"),
               "telegram": existing_data.get("telegram", "https://t.me/CricDynasty"),
               "last update time": current_time,
               "matches": existing_data.get("matches", [])
@@ -92,7 +92,9 @@ jobs:
                               "match_id": match_id,
                               "match_date": date_part,
                               "match_time": time_part,
-                              "details": f"https://cricdynasty.vercel.app/cricbuzz/m_{match_id}.json"
+                              "details": f"https://cricdynasty.vercel.app/cricbuzz/m_{match_id}.json",
+                              # Add datetime object for sorting
+                              "_sort_key": datetime.strptime(f"{date_part} {time_part}", "%d/%m/%Y %I:%M:%S %p")
                           }
                           matches.append(match_entry)
                   except Exception as e:
@@ -100,6 +102,11 @@ jobs:
 
               # Update matches if we found any
               if matches:
+                  # Sort matches by date and time (earliest first)
+                  matches.sort(key=lambda x: x["_sort_key"])
+                  # Remove the temporary sort key
+                  for match in matches:
+                      del match["_sort_key"]
                   output_data["matches"] = matches
 
           except Exception as e:
