--- a/.github/workflows/cricbuzz.yml
+++ b/.github/workflows/cricbuzz.yml
@@ -1,7 +1,7 @@
 name: Update Cricbuzz Matches Data
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Runs every 10 minutes
+    - cron: '0 */2 * * *'  # Runs at minute 0 past every 2nd hour
   workflow_dispatch:
 
 jobs:
