--- a/.github/workflows/ayush.yml
+++ b/.github/workflows/ayush.yml
@@ -17,9 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: main
+        run: |
+          git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git .
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       - name: Fetch GitHub stats SVG
         run: |
@@ -27,7 +28,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
           git add assets/ayush.svg
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update GitHub stats SVG [skip ci]" && git push)
+          git commit -m "Update GitHub stats SVG [skip ci]" || echo "No changes to commit"
+          git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }} || echo "Push failed"
